[workspace]
resolver = "3"
members = [ "lib","poh", "protocol", "thread"]

[workspace.package]
authors = ["Rivane Rasetiansyah <re@nvll.me>"]
repository = "git@github.com:rvnrstnsyh/rhythm"
homepage = "https://github.com/rvnrstnsyh/rhythm"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
criterion = { version = "0.6.0", features = ["html_reports"] }
hex = "0.4.3"
lazy_static = "1.5.0"
rand = "0.9.1"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = [
  "io-std",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
needless_return = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.test]
opt-level = 0
lto = true
codegen-units = 1
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true
