[package]
name = "protocol"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
data-encoding = "2.9.0"
futures-lite = "2.6.0"
iroh = "0.35.0"
iroh-gossip = "0.35.0"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
